--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <link rel="preconnect" href="https://cdn.jwplayer.com"/>
   <link rel="preconnect" href="https://jwpapp.com"/>
 
+  <link rel="preconnect" href="https://www.google-analytics.com" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;400;700;800&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+  />
   <!-- Safari web app -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon.png">
