chore: updated images and meta

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>JW OTT Webapp</title>
+  <title>Videot | Seiska</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="description" content="JW OTT Webapp is an open-source, dynamically generated video website." data-react-helmet="true" />
+  <meta name="description" content="Videot | Seiska" data-react-helmet="true" />
   <meta name="twitter:card" content="summary" data-react-helmet="true"  />
-  <meta property="og:title" content="JW OTT Webapp" data-react-helmet="true" >
-  <meta property="og:description" content="JW OTT Webapp is an open-source, dynamically generated video website." data-react-helmet="true">
+  <meta property="og:title" content="Seiska Videot" data-react-helmet="true" >
+  <meta property="og:description" content="Videot | Seiska" data-react-helmet="true">
   <meta property="og:image" content="/images/icon-256x256.png" data-react-helmet="true">
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -38,6 +38,9 @@
 
   <!-- Manifest -->
   <link rel="manifest" href="/manifest.json" />
+
+  <!-- Disable this for now -->
+  <META NAME="robots" CONTENT="noindex,nofollow">
 </head>
 <body>
   <div id="root"></div>
