chore: match title with config title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Videot | Seiska</title>
+  <title>SeiskaTV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="description" content="Videot | Seiska" data-react-helmet="true" />
